samples/_failures_safe/1761354237_d352e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba88fa68.c: In function ‘main’:
./samples/SAFE/__tmp_ba88fa68.c:167:31: error: expected ‘]’ at end of input
  167 |     input[strcspn(input, "\n")
      |                               ^
      |                               ]
./samples/SAFE/__tmp_ba88fa68.c:167:5: error: expected declaration or statement at end of input
  167 |     input[strcspn(input, "\n")
      |     ^~~~~
